manifests/nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  type: ClusterIP
  selector:
    app: nginx-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-ingress-pod
  labels:
    app: nginx-ingress
spec:
  containers:
    - name: nginx
      image: 315727832121.dkr.ecr.us-east-2.amazonaws.com/ecr-public/nginx/nginx:1.25
      ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-service
                port:
                  number: 80
